--- a/api/build.gradle
+++ b/api/build.gradle
@@ -20,7 +20,9 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'org.springframework.boot:spring-boot-starter-webflux'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.postgresql:postgresql:42.2.24'
 	implementation 'org.flywaydb:flyway-core:7.15.0'
 	implementation 'io.springfox:springfox-boot-starter:3.0.0'
