--- a/api/build.gradle
+++ b/api/build.gradle
@@ -6,7 +6,7 @@ plugins {
 
 group = 'com.eleks.academy'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '17'
+sourceCompatibility = JavaVersion.VERSION_17
 
 configurations {
 	compileOnly {
@@ -25,6 +25,7 @@ dependencies {
 	implementation 'org.postgresql:postgresql:42.2.24'
 	implementation 'org.flywaydb:flyway-core:7.15.0'
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'io.springfox:springfox-boot-starter:3.0.0'
 	compileOnly 'org.projectlombok:lombok:1.18.22'
 	annotationProcessor 'org.projectlombok:lombok:1.18.22'
