--- a/api/src/main/resources/application.yaml
+++ b/api/src/main/resources/application.yaml
@@ -9,6 +9,7 @@ spring:
 pharmagator:
   data-providers:
     aptslav:
+      title: Аптека "Славутич"
       base-url: https://aptslav.com.ua:3000/api/v1
       categories-url: /categories
       medicines-uri: /categories/87/products
