--- a/api/build.gradle
+++ b/api/build.gradle
@@ -26,12 +26,14 @@ dependencies {
 	implementation 'org.postgresql:postgresql:42.2.24'
 	implementation 'org.flywaydb:flyway-core:7.15.0'
 	implementation 'io.springfox:springfox-boot-starter:3.0.0'
+	implementation 'org.modelmapper:modelmapper:2.4.4'
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 	testCompileOnly 'org.projectlombok:lombok'
 	testAnnotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'com.h2database:h2:1.4.200'
+	testImplementation 'org.dbunit:dbunit:2.7.2'
 }
 
 test {
