--- a/api/build.gradle
+++ b/api/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
     id 'java'
     id "org.sonarqube" version "3.3"
+    id 'jacoco'
 }
 
 group = 'com.eleks.academy'
@@ -50,4 +51,5 @@ test {
     testLogging {
         events = ["passed", "skipped", "failed"]
     }
+    finalizedBy jacocoTestReport
 }
