fixed DbUnit tests Now test aren't deleting all data from tables

--- a/api/src/test/resources/application-test.yaml
+++ b/api/src/test/resources/application-test.yaml
@@ -5,6 +5,9 @@ spring:
     username: postgres
     password: postgres
   jpa:
-    database-platform: org.hibernate.dialect.H2Dialect
     hibernate:
       ddl-auto: validate
+    properties:
+      hibernate:
+        hbm2dll:
+          extra_physical_table_types: MATERIALIZED VIEW
